view/admin/shopinfo - control,dao,domain,service

--- a/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
+++ b/beautyChuSpring/src/main/webapp/view/admin/shop_info.html
@@ -269,13 +269,14 @@
                   <div class="form-panel">
                   	  <h4 class="mb"><i class="fa fa-angle-right"></i> Shop Info</h4>
                   	  
-                      <form class="form-horizontal style-form" method="get">
+                      <form class="form-horizontal style-form" method="post" enctype="multipart/form-data">
                       
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">샵프로필사진</label>
                               <div class="col-sm-10">
-                              	<img class="thumb" width="100" src="assets/img/ui-zac.jpg" alt="shop-profile-img">
-                              	<input type="file" id="files-short" name="filesS[]" multiple />
+                              <!-- <img class="thumb" width="100" src="assets/img/ui-zac.jpg" alt="shop-profile-img"> -->
+                              <img id="shopProfile" class="thumb" width="100" alt="shop-profile-img">
+                              	<input type="file" id="profileInput" name="filesS[]" multiple />
 								<output id="list-short"></output>	
                               </div>
                           </div>
@@ -283,43 +284,42 @@
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">이메일</label>
                               <div class="col-sm-10">
-                                  <input type="text" id='email' class="form-control round-form" value="" placeholder="aa@gmail.com">
+                                  <input type="text" id='email' class="form-control round-form" value="" placeholder="User Email" readonly="readonly">
                               </div>
                           </div>
                           
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">사업자번호</label>
                               <div class="col-sm-10">
-                                  <input type="text" id='licenseeNo' class="form-control round-form" placeholder="118-444-2443">
+                                  <input type="text" id='licenseeNo' class="form-control round-form" placeholder="Licensee Number">
                               </div>
                           </div>
                           
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">샵이름</label>
                               <div class="col-sm-10">
-                                  <input type="text" id='shopName' class="form-control round-form" placeholder="박준 뷰티랩">
+                                  <input type="text" id='shopName' class="form-control round-form" placeholder="Shop Name">
                               </div>
                           </div>
                           
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">샵주소</label>
                               <div class="col-sm-10">
-                                  <input type="text" id='shopAddr' class="form-control round-form" placeholder="서울시 강남구 삼성로 725">
+                                  <input type="text" id='shopAddr' class="form-control round-form" placeholder="Shop Address">
                               </div>
                           </div>
                           
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">샵전화번호</label>
                               <div class="col-sm-10">
-                                  <input type="text" id='shopTel' class="form-control round-form" placeholder="02-511-1414">
+                                  <input type="text" id='shopTel' class="form-control round-form" placeholder="Shop Tel">
                               </div>
                           </div>
                           
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">샵소개</label>
                               <div class="col-sm-10">
-                              	<textarea id='shopIntro' name="shop-intro" rows="2" cols="80" class="form-control round-form">박준뷰티랩은 고객의 아름다움과 즐거움을 위해 다양한 뷰티 서비스를 제공합니다.
-고객의 외모뿐 아니라 아름다운 마음으로 나가실 수 있도록 늘 고객에게 집중하고 있습니다.</textarea>
+                              	<textarea id='shopIntro' name="shop-intro" rows="2" cols="80" class="form-control round-form"></textarea>
 								<div class="remaining text-right">남은 글자수: <span class="info-count">100</span></div>
                               </div>
                           </div>
@@ -332,6 +332,7 @@
                               	<button type="submit" class="btn btn-theme">Upload</button>
                           </div>
                           
+                          <!-- Update Shop Info Button -->
                           <div class="form-group">
                           	<div class="col-sm-12">
                           		<button type="button" id='shop-updateBtn' class="btn btn-theme btn-block btn-lg">Save & Update</button>
@@ -362,119 +363,146 @@
 
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/jquery.form.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script class="include" type="text/javascript" src="assets/js/jquery.dcjqaccordion.2.7.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
     <script src="assets/js/jquery.nicescroll.js" type="text/javascript"></script>
 
+	<!-- jQuery MultiFile Plugin import -->
+	<script src="assets/js/jquery.MultiFile.js"></script>
 
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
-	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>    
-    <script src="assets/js/tasks.js" type="text/javascript"></script>
 
-    <script>
-      jQuery(document).ready(function() {
-          TaskList.initTaskWidget();
-      });
-
-      $(function() {
-          $( "#sortable" ).sortable();
-          $( "#sortable" ).disableSelection();
-      });
-
-    </script>
-
-  <!-- shop-info textarea maxlength -->
-  <script type="text/javascript">
+<script type="text/javascript">
+var imsiEmail;
   $(function() {
-	    $('.remaining').each(function() {
-	        // count 정보 및 count 정보와 관련된 textarea/input 요소를 찾아내서 변수에 저장한다.
-	        var $count = $('.info-count', this);
-	        var $input = $(this).prev();
-	        // .text()가 문자열을 반환하기에 이 문자를 숫자로 만들기 위해 1을 곱한다.
-	        var maximumCount = $count.text() * 1;
-	        // update 함수는 keyup, paste, input 이벤트에서 호출한다.
-	        var update = function() {
-	            var before = $count.text() * 1;
-	            var now = maximumCount - $input.val().length;
-	            // 사용자가 입력한 값이 제한 값을 초과하는지를 검사한다.
-	            if (now < 0) {
-	                var str = $input.val();
-	                alert('글자 입력수가 초과하였습니다.');
-	                $input.val(str.substr(0, maximumCount));
-	                now = 0;
-	            }
-	            // 필요한 경우 DOM을 수정한다.
-	            if (before != now) {
-	                $count.text(now);
-	            }
-	        };
-	        // input, keyup, paste 이벤트와 update 함수를 바인드한다
-	        $input.bind('input keyup paste', function() {
-	            setTimeout(update, 0)
-	        });
-	        update();
-	    });
-	    
-	    
-	    
+	    /* AJAX로 email 로그인 정보 가져오기 */
 	    $.ajax({
 			type : 'get',
 			dataType : "json",
 			url : '../../json/auth/loginUser.do',
 			success : function(data) {
-				console.log(data.status);
+				console.log("login 정보" + data.status);
 				console.log(data.loginUser);
-				alert("추가완료");
 				$('#email').val(data.loginUser.email);
-				console.log(data.loginUser.email);
+				alert(data.loginUser.email + "정보가져옴");
+				imsiEmail = data.loginUser.email;
 			},
 			error : function() {
 				console.log('ajax 실패');
 			}
-
+		}).done(function(){
+		    /* AJAX로 email로 shop 정보 가져오기 */
+		    $.ajax({
+				type : 'get',
+				dataType : "json",
+				data : {
+					email : imsiEmail
+				},
+				url : '../../json/shop/list.do',
+				success : function(data) {
+					console.log(imsiEmail);
+					console.log(data.listShopInfo);
+					console.log(data.listShopInfo[0].shopPhotoUrl);
+					
+					$('#shopProfile').attr('src','/beautyChuSpring_K/fileupload' + data.listShopInfo[0].shopPhotoUrl);
+					$('#licenseeNo').val(data.listShopInfo[0].licenseeNo);
+					$('#shopName').val(data.listShopInfo[0].shopName);
+					$('#shopAddr').val(data.listShopInfo[0].shopAddr);
+					$('#shopTel').val(data.listShopInfo[0].shopTel);
+					$('#shopIntro').val(data.listShopInfo[0].shopIntro);
+				},
+				error : function() {
+					console.log('ajax shop정보 실패');
+				}
+			});
 		});
 	    
-	    
-	    
-	});
-  </script>
+	    /* AJAX 서버로 데이터 보내서 update */
+		$('#shop-updateBtn').click(function() {
+			/* var profileInput = document.getElementById("profileInput").files[0].name;
+			var photo1 = profileInput[0];
+			var shopPhotoName = profileInput[0].name; */
+			console.log(profileInput);
 
+			$("form").ajaxSubmit({
+				dataType : "json",
+				url : '../../json/shop/fileUpload.do',
+				data : {email : imsiEmail},
+				success : function(data) {
+					console.log(data);
+					console.log(data.result);
+				},
+				error : function(error) {
+					alert("요청 처리 중 오류가 발생하였습니다.");
+				}
+			});
+			
+			$.ajax({
+				type : 'post',
+				dataType : "json",
+				url : '../../json/shop/update.do',
+				data : {
+					/* shopPhotoUrl : $ */ 
+					email : $('#email').val(),
+					licenseeNo : $('#licenseeNo').val(),
+					shopName : $('#shopName').val(),
+					shopAddr : $('#shopAddr').val(),
+					shopTel : $('#shopTel').val(),
+					shopIntro : $('#shopIntro').val(),
+					
+				},
+				success : function(data) {
+					console.log(data.status);
+					alert('등록완료');
+				},
+				error : function() {
+					console.log('등록 실패');
+				}
 
-<!-- AJAX로 서버에서 불러오기 스크립트 -->
-<script>
+			});
 
-	$('#shop-updateBtn').click(function() {
-		$.ajax({
-			type : 'post',
-			dataType : "json",
-			url : '../../json/shop/update.do',
-			data : {
-				email : $('#email').val(),
-				licenseeNo : $('#licenseeNo').val(),
-				shopName : $('#shopName').val(),
-				shopAddr : $('#shopAddr').val(),
-				shopTel : $('#shopTel').val(),
-				shopIntro : $('#shopIntro').val(),
-				
-			},
-			success : function(data) {
-				console.log(data.status);
-				console.log(data.loginUser);
-				alert("추가완료");
-				//$('#email').html(data.loginUser.email);
-				console.log(data.loginUser.email);
-			},
-			error : function() {
-				console.log('ajax 실패');
-			}
+			
 
+			
 		});
 
+	    
+	    /* 샵정보 maxlength */  
+		  $('.remaining').each(function() {
+		        // count 정보 및 count 정보와 관련된 textarea/input 요소를 찾아내서 변수에 저장한다.
+		        var $count = $('.info-count', this);
+		        var $input = $(this).prev();
+		        // .text()가 문자열을 반환하기에 이 문자를 숫자로 만들기 위해 1을 곱한다.
+		        var maximumCount = $count.text() * 1;
+		        // update 함수는 keyup, paste, input 이벤트에서 호출한다.
+		        var update = function() {
+		            var before = $count.text() * 1;
+		            var now = maximumCount - $input.val().length;
+		            // 사용자가 입력한 값이 제한 값을 초과하는지를 검사한다.
+		            if (now < 0) {
+		                var str = $input.val();
+		                alert('글자 입력수가 초과하였습니다.');
+		                $input.val(str.substr(0, maximumCount));
+		                now = 0;
+		            }
+		            // 필요한 경우 DOM을 수정한다.
+		            if (before != now) {
+		                $count.text(now);
+		            }
+		        };
+		        // input, keyup, paste 이벤트와 update 함수를 바인드한다
+		        $input.bind('input keyup paste', function() {
+		            setTimeout(update, 0)
+		        });
+		        update();
+		    });
+	    
 	});
+  
 </script>
 
 
